Completed features like appointment booking, approve from doctors and other service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,4 @@ server.servlet.context-path=/book-your-appointment
 
 spring.mvc.view.prefix=/WEB-INF/pages/
 spring.mvc.view.suffix=.jsp
+spring.mvc.format.date-time=dd-MM-yyyy
