--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ server.servlet.context-path=/book-your-appointment
 spring.mvc.view.prefix=/WEB-INF/pages/
 spring.mvc.view.suffix=.jsp
 spring.mvc.format.date-time=dd-MM-yyyy
+
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
